# compat

./: .gitignore  CMakeLists.txt  README.md  defs_test.c  regex_test.c  threads_test.c  types_test.c
compat/: compat.h  defs.h  regex.h  threads.h  types.h
compat/gnuwin32/regex/: re_comp.h  regex.c  regex.h
compat/msvc/: inttypes.c  inttypes.h  stdbool.h  stddef.h  stdint.h
compat/windows/: inttypes.h  stdbool.h  stddef.h  stdint.h
compat/windows/gnurx/: regex.c  regex.h
compat/windows/regex/: regcomp.c  regex.h  regexec.c  regmatch.c
compat/windows/threads/: threads.c
